fix(build): #1192 limit ram for apk build